<resources>
    <string name="app_name">Crypto Prices</string>
    <string name="earned_coins">Earned Coins</string>
    <string name="start_mining">Start Mining</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="congrats_title">Congrats !!!</string>
    <string name="congrats_msg_user">You earned %1$s SHIB for new sign up.</string>
    <string name="congrats_msg_invitee">Your friend earned %1$s SHIB for referring you.</string>
    <string name="congrats_msg_user_pro">You are now PRO user. Enjoy the benefits.</string>

    <!--ad ids-->
    <string name="startapp_app_id">206697107</string>

    <!--unity ad ids-->
    <string name="unity_ad_id">4209865</string>

    <string name="logOut">Log Out</string>
    <string name="tnc"><![CDATA[Terms & Conditions]]></string>
    <string name="pp">Privacy Policy</string>
    <string name="settings">Settings</string>
    <string name="rewarded_dialog_header">Reward</string>
    <string name="rewarded_dialog_message">Congrats!!! You earned %1$s SHIB for viewing the ad. Keep supporting. Keep earning.</string>
    <string name="spin_rewarded_dialog_message">Hurray!!! You earned %1$s SHIB.</string>
    <string name="error_login_credential_malformed_or_expired">The supplied auth credential is malformed or has expired.</string>
    <string name="error_login_invalid_email">The email address is badly formatted.</string>
    <string name="error_login_wrong_password">The password is invalid or the user does not have a password.</string>
    <string name="error_login_accounts_exits_with_different_credential">An account already exists with the same email address but different sign-in credentials. Sign in using a provider associated with this email address.</string>
    <string name="error_login_email_already_in_use">The email address is already in use by another account.</string>
    <string name="error_login_credential_already_in_use">This credential is already associated with a different user account.</string>
    <string name="error_login_user_not_found">There is no user record corresponding to this identifier. The user may have been deleted.</string>
    <string name="error_login_password_is_weak">The given password is invalid.</string>
    <string name="error_login_default_error">Authentication Failed. Please try again.</string>
    <string name="signout_confirmation">Do you want to log out ?</string>
    <string name="ad_shown_flag">adShownFlag</string>
    <string name="withdrawRequests">Withdraw Requests</string>
    <string name="withdrawRequestsOld">Withdraw Requests (Old)</string>
    <string name="min_withdraw_note">Note: Min Withdrawable balance is %1$s SHIB. Payouts will be done on every Sunday.</string>
    <string name="withdraw_fee">Withdrawal Fee: 0.1 XRP</string>
    <string name="withdraw_schedule">Note: Payouts will be done on every Sunday.</string>
    <string name="withdraw_issue_note">Note: Since we are facing some issue in transferring SHIB coins to other wallets, we will be
    transferring equivalent XRP coins. You can exchange these XRP coins for SHIB coins from any of your favorite exchange.</string>
    <string name="withdraw_issue_note_binace">Note: User should have Binance account created &amp; verified with above Email/Phone/Pay Id else
    your coins will get lost. We will not be able to recover them later.</string>
    <string name="refer_msg_detail">On Successful referral &amp; sign up, you will\n be rewared by %1$s SHIBA coins.</string>
    <string name="wallet_hint_text">XRP(Ripple) Wallet Address</string>
    <string name="binace_hint_text">Binance Email/Phone/Pay ID</string>
    <string name="c_code_hint_text">+1</string>
    <string name="wallet_tag_hint_text">XRP Tag</string>
    <string name="help_text">Guide to Set Up a Crypto Wallet on Mobile (Just informatory)</string>
    <string name="min_withdraw_coins">minWithdrawCoins</string>
    <string name="my_refer_link">Click Here</string>
    <string name="wallet_refer_text">Users can refer to this app via below link to easily get XRP wallet address and Tag. (Just a suggestion not mandatory, may work for India only)</string>
    <string name="binace_refer_text">Users can easily create their Binance account via below link.</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_market">Market</string>
    <string name="title_explore">Explore</string>
    <string name="title_more">More</string>
    <string name="title_fun">Fun</string>
    <string name="title_news">News</string>
    <string name="title_games">Games</string>
    <string name="alert">Alert</string>
    <string name="server_down">App is Under Maintenance. Please try after sometime</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="error_billing">Some error occurred. Please try again later.</string>
    <string name="billing_cancelled">Billing Cancelled</string>
    <string name="upgrade">Pro Features</string>
    <string name="isPro">isPro</string>
    <string name="title_activity_nav_drawer_main">NavDrawerMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Let\'s build our fortune together</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="share">Share</string>
    <string name="error_msg">Oops !! Something went wrong. Please try again after sometime.</string>
    <string name="load_data">Load Data</string>
    <string name="gamezop_url">https://www.gamezop.com/?id=4323</string>
    <string name="spin_win">Spin &amp; Win</string>
    <string name="binace_email">Binance Email</string>
    <string name="binace_phone">Binance Phone</string>
    <string name="binace_payid">Binance Pay Id</string>
    <string name="no_internet_msg">No Internet connection !!</string>
    <string name="network_failure">Network Failure !!</string>
    <string name="conversion_error">Conversion Error !!</string>
    <string name="dash">-</string>
    <!--<string name="default_web_client_id">877942844398-29tt3cav4h8mkdjnh58lr4c5q8epcpgj.apps.googleusercontent.com</string>-->

    <string-array name="currency_codes">
        <item>aed</item>
        <item>ars</item>
        <item>aud</item>
        <item>bch</item>
        <item>bdt</item>
        <item>bhd</item>
        <item>bits</item>
        <item>bmd</item>
        <item>bnb</item>
        <item>brl</item>
        <item>btc</item>
        <item>cad</item>
        <item>chf</item>
        <item>clp</item>
        <item>cny</item>
        <item>czk</item>
        <item>dkk</item>
        <item>dot</item>
        <item>eos</item>
        <item>eth</item>
        <item>eur</item>
        <item>gbp</item>
        <item>hkd</item>
        <item>huf</item>
        <item>idr</item>
        <item>ils</item>
        <item>inr</item>
        <item>jpy</item>
        <item>krw</item>
        <item>kwd</item>
        <item>link</item>
        <item>lkr</item>
        <item>ltc</item>
        <item>mmk</item>
        <item>mxn</item>
        <item>myr</item>
        <item>ngn</item>
        <item>nok</item>
        <item>nzd</item>
        <item>php</item>
        <item>pkr</item>
        <item>pln</item>
        <item>rub</item>
        <item>sar</item>
        <item>sats</item>
        <item>sek</item>
        <item>sgd</item>
        <item>thb</item>
        <item>try</item>
        <item>twd</item>
        <item>uah</item>
        <item>usd</item>
        <item>vef</item>
        <item>vnd</item>
        <item>xag</item>
        <item>xau</item>
        <item>xdr</item>
        <item>xlm</item>
        <item>xrp</item>
        <item>yfi</item>
        <item>zar</item>
    </string-array>

    <string-array name="currency_names">
        <item>aed</item>
        <item>ars</item>
        <item>aud</item>
        <item>Bitcoin Cash</item>
        <item>bdt</item>
        <item>bhd</item>
        <item>bits</item>
        <item>bmd</item>
        <item>Binance Coin</item>
        <item>brl</item>
        <item>Bitcoin</item>
        <item>cad</item>
        <item>chf</item>
        <item>clp</item>
        <item>cny</item>
        <item>czk</item>
        <item>dkk</item>
        <item>Polkadot</item>
        <item>EOS</item>
        <item>Ether</item>
        <item>eur</item>
        <item>gbp</item>
        <item>hkd</item>
        <item>huf</item>
        <item>idr</item>
        <item>ils</item>
        <item>inr</item>
        <item>jpy</item>
        <item>krw</item>
        <item>kwd</item>
        <item>Chainlink</item>
        <item>lkr</item>
        <item>Litecoin</item>
        <item>mmk</item>
        <item>mxn</item>
        <item>myr</item>
        <item>ngn</item>
        <item>nok</item>
        <item>nzd</item>
        <item>php</item>
        <item>pkr</item>
        <item>pln</item>
        <item>rub</item>
        <item>sar</item>
        <item>sats</item>
        <item>sek</item>
        <item>sgd</item>
        <item>thb</item>
        <item>try</item>
        <item>twd</item>
        <item>uah</item>
        <item>usd</item>
        <item>vef</item>
        <item>vnd</item>
        <item>xag</item>
        <item>xau</item>
        <item>xdr</item>
        <item>Lumens</item>
        <item>XRP</item>
        <item>Yearn.finance</item>
        <item>zar</item>
    </string-array>
</resources>