<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <!--<item
            android:id="@+id/navigation_faucet"
            android:checked="true"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_faucet" />-->

        <item
            android:id="@+id/navigation_market"
            android:icon="@drawable/ic_market_24"
            android:checked="true"
            android:title="@string/title_market" />

        <item
            android:id="@+id/navigation_explore"
            android:icon="@drawable/ic_baseline_library_books_24"
            android:title="@string/title_news" />
    </group>

    <item android:title="Play Station">
        <menu>
            <item
                android:id="@+id/navigation_games"
                android:icon="@drawable/ic_baseline_games_24"
                android:title="@string/title_games" />
            <item
                android:id="@+id/navigation_share"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/navigation_settings"
                android:icon="@android:drawable/ic_menu_manage"
                android:title="@string/action_settings" />
        </menu>
    </item>
</menu>